- Fixed issue where blog post content would be too narrow on mobile. - Fixed issue where navigation panel on blog post index page would stretch past mobile screen size.

--- a/src/client/pages/Posts/Index/PostsIndexPage.scss
+++ b/src/client/pages/Posts/Index/PostsIndexPage.scss
@@ -8,6 +8,12 @@
   width: $post-width + px;
 }
 
+@media only screen and (max-width: 600px) {
+  .pagination-panel {
+    width: 300px;
+  }
+}
+
 .posts-container {
   display: flex;
   flex-direction: column;
