--- a/src/client/pages/Posts/components/Post/Post.scss
+++ b/src/client/pages/Posts/components/Post/Post.scss
@@ -1,7 +1,6 @@
 @import "../../../../common/variables";
 
 .post-container {
-  width: 90%;
   max-width: $post-width + px;
   padding-left: 7px;
 }
